--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+.shadow{
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #02154E;
+    border-radius: 50px;
+    border: 5px solid black;
+    box-shadow: 5px 10px #888888;
+}
 :root{
     --btnclr: #37c3a8;
     --otherclr:#000000;
@@ -22,6 +32,8 @@ html{
     justify-content: space-between;
     align-items: center;
     border-bottom: 3px solid #000;
+     border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
 }
 #logo img{
     width: 100px;
@@ -299,6 +311,8 @@ color: black;
     border-top: 3px solid #000;
     background: rgb(29, 28, 28);
     padding: 3rem 7%;
+    border-end-end-radius: 50px;
+    border-end-start-radius: 50px;
 }
 .main-footer{
     display: flex;
