--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin-left: 50px;
     margin-top: 50px;
     margin-bottom: 50px;
-    background-color: #02154E;
+    background-color: #f5f5f5;
     border-radius: 50px;
 }
 :root{
