--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ font-size: 1.5rem;
     display: none;
 }
 .background-image{
-    background: url(images/background.png);
+    background: url(https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1453&q=80);
     background-size: cover;
     background-position: center;
     width: 100%;
