--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 3px solid #000;
+    border-bottom: 3px solid #f5f5f5;
      border-top-left-radius: 50px;
     border-top-right-radius: 50px;
 }
@@ -76,7 +76,7 @@ font-size: 1.5rem;
     align-items: center;
     background-color: #37c3a8;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    border-bottom: 3px solid #000;
+    border-bottom: 3px solid #f5f5f5;
 }
 .navbar a{
     margin-right: 1rem;
