--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ font-size: 1.5rem;
     margin-right: 1rem;
     padding: 1rem 2rem;
     font-size: 1.5rem;
-    color: white;
+    color: #000;
 }
 .navbar a:hover{
     background: var(--btnclr);
