--- a/style.css
+++ b/style.css
@@ -78,16 +78,19 @@ font-size: 1.5rem;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border-bottom: 3px solid #f5f5f5;
 }
+
 .navbar a{
     margin-right: 1rem;
     padding: 1rem 2rem;
     font-size: 1.5rem;
-    color: #000;
+    color: white;
+    font-size: 2rem;
 }
 .navbar a:hover{
     background: var(--btnclr);
-    color: white;
+    color: black;
     border-radius: 10px;
+    font-size: 3rem;
 }
 .navbar.active{
     top: 35%;
