--- a/style.css
+++ b/style.css
@@ -146,6 +146,8 @@ font-size: 1.5rem;
 }
 .background-content a:hover{
     background: var(--otherclr);
+     transform: rotate(360deg);
+    font-size: 2rem;
 }
 .our-services{
     padding: 2rem 5%;
