--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ font-size: 1.5rem;
     
 }
 .background-content a:hover{
-    background: var(--otherclr);
+    background: white;
     font-size: 1.6rem;
 }
 .our-services{
