--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ font-size: 1.5rem;
 }
 .background-content a:hover{
     background: white;
-    font-size: 1.6rem;
+    font-size: 1.75rem;
+    border: #000 1px solid;
 }
 .our-services{
     padding: 2rem 5%;
