--- a/style.css
+++ b/style.css
@@ -469,6 +469,18 @@ color: black;
   .sliders{
     margin-bottom: 4%;
   }
+ .para {
+    color: black;
+    font-size: 1.5rem;
+    text-align: left;
+    margin-bottom: 10px; /* Add margin to separate paragraphs */
+
+  }
+  
+
+ .left-25{
+    left: 25%;
+ }
 
   
  
